@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Fri, Apr 10, 2009
 ---------------------------------------------------------------------
 - Added activity tracking for recently viewed items.
+- Added activity named scopes to select records by user and action.
 
 Thu, Apr 9, 2009
 ---------------------------------------------------------------------
